--- a/public/_shared/modules/header/masthead.jade
+++ b/public/_shared/modules/header/masthead.jade
@@ -1,4 +1,4 @@
 header.masthead.p
   .section-inner
     a(class='logo' href='/')
-      span.h1.bold #{ site_title }
+      span.h1 #{ site_title }
