--- a/browser/style/base/base.css
+++ b/browser/style/base/base.css
@@ -2,11 +2,17 @@
    The Base
    ========================================================================== */
 body {
-  background: url('/static/assets/textures/debut_light.png') repeat 0 0 #ffffff;
+	background: #fff;
 }
-@media (-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dppx) {
+.the-footer {
+	margin-top: 2em;
+  padding-top: 2em;
+  border-top: 1px #ddd solid;
+	background: url('/static/assets/textures/debut_light.png') repeat 0 0 #ffffff;
+}
+	@media (-webkit-min-device-pixel-ratio: 2),
+	(min-resolution: 192dppx) {
   body {
-    background:url('/static/assets/textures/debut_light_@2X.png') repeat 0 0;
+		background:url('/static/assets/textures/debut_light_@2X.png') repeat 0 0;
   }
 }
