Modify credit style

--- a/browser/style/main.css
+++ b/browser/style/main.css
@@ -12,6 +12,7 @@
    ========================================================================== */
 @import url("module/masthead.css");
 @import url("module/metadata.css");
+@import url("module/credit.css");
 
 /* ==========================================================================
    State
