--- a/browser/style/base/base.css
+++ b/browser/style/base/base.css
@@ -7,12 +7,7 @@ body {
 .the-footer {
 	margin-top: 2em;
   padding-top: 2em;
+  padding-bottom: 2em;
   border-top: 1px #ddd solid;
 	background: url('/static/assets/textures/debut_light.png') repeat 0 0 #ffffff;
-}
-	@media (-webkit-min-device-pixel-ratio: 2),
-	(min-resolution: 192dppx) {
-  body {
-		background:url('/static/assets/textures/debut_light_@2X.png') repeat 0 0;
-  }
 }
